# Test-Data-Builder

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  column-type-system.md  file-upload-pattern.md  python-backend-path.md
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/studio/: index.html
artifacts/studio/.replit-artifact/: artifact.toml
artifacts/studio/src/: App.tsx  index.css
attached_assets/: Pasted--Build-Prompt-Synthetic-Data-Studio-Replit-full-stack-P_1781606059239.txt  Pasted--PROMPT-1-Replicator-Realism-Overhaul-Empirical-Joint-D_1781713405075.txt
backend/: main.py
backend/creator/: parser.py
backend/engine/: generator.py  topological.py  validator.py
backend/jobs/: store.py
backend/llm/: client.py
backend/outputs/2ee48e29-1121-49c3-ab48-ecc5de79b46e/: test_people.csv
backend/outputs/4eac61bb-8bd7-4c33-94fb-a081c72a6f40/: application_table__jj.csv  member_loan_history.csv
backend/outputs/649d16d5-ba7a-4aae-9d7b-56978f884885/: test_products.csv
backend/outputs/6ca8a88c-ac3c-42dd-96f8-6559153162bf/: users.csv
backend/outputs/97ed1b25-8a8c-4c17-8e9e-484f775e6eae/: application_table__jj.csv  member_profile_table__jj.csv  relationship_table__jj.csv
backend/outputs/ad6e0993-5546-4b2c-b892-ba8e13c5470e/: member_loan_history.csv
backend/replicator/: ingest.py  profiler.py  semantics.py
backend/spec/: models.py
backend/spec/examples/: ecommerce.json  employees.json
backend/tests/: test_realism.py
backend/validation/: report.py
lib/api-spec/: openapi.yaml
(+6 files in other folders)
