[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.109.2",
    "faker>=40.23.0",
    "fastapi>=0.137.1",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.49.0",
    "xlrd>=2.0.2",
]
